<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_gioi_thieu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/nen_app">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgQuayLai"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_arrow_left_96"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/avata_app"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImage" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ve_chung_toi_health_tracking"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/su_menh"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/mo_ta_su_menh"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chung_toi_lam_gi"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/chung_toi_lam_gi_mot"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/chung_toi_lam_gi_hai"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/chung_toi_lam_gi_ba"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/chung_toi_lam_gi_bon"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tai_sao_chon_health_tracking"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tai_sao_chon_health_tracking_mot"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tai_sao_chon_health_tracking_hai"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tai_sao_chon_health_tracking_ba"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
