<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/nen_app">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="end">
        <ImageView
            android:id="@+id/imgDong"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/thoat"
            android:src="@drawable/ic_close_90"/>
    </LinearLayout>
    
    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/warter"
        android:contentDescription="@string/nuoc_uong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nhap_lung_nuoc_trong_ngay"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edtLuongNuoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:inputType="number"
        android:padding="10dp"
        android:hint="@string/ml"
        android:gravity="center"
        android:textSize="22sp"
        android:background="@drawable/cus_edittext"/>

    <Button
        android:id="@+id/btnXacNhanOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/cus_button_indigo"/>
</LinearLayout>