<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="330dp"
    android:layout_margin="20dp"
    android:layout_gravity="center"
    android:padding="6dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="35dp"
            android:text="@string/can_nang_cua_toi"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imgDong"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_close_90"
            android:contentDescription="@string/thoat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center">
        <EditText
            android:id="@+id/edtNhapCanNang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:gravity="center"
            android:layout_marginStart="80dp"
            android:text="@string/nhap_can_nang"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/Gray"
            android:background="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/kg"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/Gray"/>

        <ImageView
            android:id="@+id/imgXoaChu"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_close_90"
            android:contentDescription="@string/xoa" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/txtKtr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/btnLuuCanNang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/cus_button_indigo"/>
</LinearLayout>